setup author routes

--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mybrary</title>
-</head>
-<body>
-    <%- body %>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Mybrary</title>
+        <link rel="stylesheet" href="css/index.css">
+        <link rel="stylesheet" href="css/header.css">
+    </head>
+    <body>
+        <%- include('../partials/header.ejs') %> 
+        <%- include('../partials/errorMessage.ejs') %>
+        <%- body %>
+    </body>
 </html>
